# ci-cd-demo-for-lab

./: CMakeLists.txt  README.md  factorial.cpp  factorial.hpp
.github/workflows/: cmake-multi-platform.yml
